--- a/1diena/2.uzduotis/index.html
+++ b/1diena/2.uzduotis/index.html
@@ -11,24 +11,25 @@
 
 <body>
 
-  <div class="normal container">
-    <h1>$9.99</h1>
-    <h4>Normal Event Ticket</h4>
-    <p>First Feature Here</p>
-    <p>Second Feature Here</p>
-    <p>Third Feature Here</p>
-    <button type="submit">Buy Tickets Now</button>
-  </div>
+  <div class="container">
+    <div class="normal box">
+      <h1>$9.99</h1>
+      <h4>Normal Event Ticket</h4>
+      <p>First Feature Here</p>
+      <p>Second Feature Here</p>
+      <p>Third Feature Here</p>
+      <button type="submit">Buy Tickets Now</button>
+    </div>
 
-  <div class="premium container">
-    <h1>$14.99</h1>
-    <h4>Premium Event Ticket</h4>
-    <p>First Feature Here</p>
-    <p>Second Feature Here</p>
-    <p>Third Feature Here</p>
-    <button type="submit">Buy Tickets Now</button>
+    <div class="premium box">
+      <h1>$14.99</h1>
+      <h4>Premium Event Ticket</h4>
+      <p>First Feature Here</p>
+      <p>Second Feature Here</p>
+      <p>Third Feature Here</p>
+      <button type="submit">Buy Tickets Now</button>
+    </div>
   </div>
-
 
 </body>
 
