trecia ir ketvirta uzduotys ikelimas

--- a/1diena/3.uzduotis/index.html
+++ b/1diena/3.uzduotis/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,31 @@
   <title>3 užduotis</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="picture">
-    <img src="images/pexels-admiral-general-m-⭐⭐⭐⭐⭐-godshepherdly-789555.jpg" alt="travel">
-  </div>
-
-  <div class="form">
-    <img src="images/globe-5-64.png" alt="">
-    <h1>Get The Best Ticket Today!</h1>
-    <p>You can add unlimited fields directly from HTML</p>
-
-    <div>
-      <input type="text" placeholder="Your Full Name">
-      <input type="text" placeholder="Your Email">
-      <input type="text" placeholder="Your Phone Number">
+  <div class="main">
+    <div id="leftHalf">
+      <img src="images/pexels-admiral-general-m-⭐⭐⭐⭐⭐-godshepherdly-789555 (1).jpg" alt="">
     </div>
 
-    <button type="submit">Send Information</button>
+    <div id="rightHalf">
+      <form action="index.html">
+        <img src="images/globe-5-64.png" alt="globe">
+        <h1>Get The Best Ticket Today!</h1>
+        <p>You can add unlimited fields directly from HTML</p>
+
+        <div>
+          <input type="text" placeholder="Your Full Name">
+          <input type="text" placeholder="Your Email">
+          <input type="text" placeholder="Your Phone Number">
+        </div>
+
+        <button type="submit">Send Information</button>
+      </form>
+
+      <p class="aftertext">*Some awesome dummy text goes here.</p>
+    </div>
   </div>
 </body>
+
 </html>
