--- a/1diena/4.uzduotis/index.html
+++ b/1diena/4.uzduotis/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,18 @@
   <title>4 užduotis</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
-  <div> 
-    <p>hsdhjhgjhgfjhjhjhgjhsjgh</p>
-    <img src="images/pexels-aleksandar-pasaric-2070118.jpg" alt="buddha">
+
+  <div class="container">
+    <div class="box">
+      <p>hsdhjhgjhgfjhjhjhgjhsjgh</p>
+    </div>
+    <div class="box">
+      <img src="images/pexels-aleksandar-pasaric-2070118.jpg" alt="buddha">
+    </div>
   </div>
 
 </body>
+
 </html>
