penktos uzduoties kelimas

--- a/1diena/5.uzduotis/index.html
+++ b/1diena/5.uzduotis/index.html
@@ -25,6 +25,9 @@
         Obcaecati ipsum earum velit iusto deserunt rerum
         ullam! Ullam, nesciunt reiciendis. Error commodi necessitatibus dolorem quod ratione expedita fuga assumenda
         esse inventore? Maxime eaque velit in labore ut ducimus repellendus. Error nemo minus odio quasi excepturi, eum
+        consectetur temporibus hic molestias consequuntur. Obcaecati ipsum earum velit iusto deserunt rerum
+        ullam! Ullam, nesciunt reiciendis. Error commodi necessitatibus dolorem quod ratione expedita fuga assumenda
+        esse inventore? Maxime eaque velit in labore ut ducimus repellendus. Error nemo minus odio quasi excepturi, eum
         consectetur temporibus hic molestias consequuntur.</p>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, itaque suscipit error ipsum, nostrum
         fugiat minus, autem deleniti velit odio debitis modi voluptatibus recusandae asperiores vitae cupiditate
@@ -44,13 +47,16 @@
         Obcaecati ipsum earum velit iusto deserunt rerum
         ullam! Ullam, nesciunt reiciendis. Error commodi necessitatibus dolorem quod ratione expedita fuga assumenda
         esse inventore? Maxime eaque velit in labore ut ducimus repellendus. Error nemo minus odio quasi excepturi, eum
+        consectetur temporibus hic molestias consequuntur. Obcaecati ipsum earum velit iusto deserunt rerum
+        ullam! Ullam, nesciunt reiciendis. Error commodi necessitatibus dolorem quod ratione expedita fuga assumenda
+        esse inventore? Maxime eaque velit in labore ut ducimus repellendus. Error nemo minus odio quasi excepturi, eum
         consectetur temporibus hic molestias consequuntur.</p>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, itaque suscipit error ipsum, nostrum
         fugiat minus, autem deleniti velit odio debitis modi voluptatibus recusandae asperiores vitae cupiditate
         pariatur! Architecto, alias.</p>
     </div>
-
   </div>
+
 </body>
 
 </html>
