--- a/1diena/6.uzduotis/index.html
+++ b/1diena/6.uzduotis/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>6 užduotis</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
   <div class="container">
-    <h1>HTML BUNDLE IS HERE</h1>
-    <p>More than 10 unique HTML templates in one bundle isn't that awesome with a lot of features and great design brought to you by PixFort</p>
+    <div class="text-box">
+      <h1>HTML BUNDLE IS HERE</h1>
+      <p>More than 10 unique HTML templates in one bundle isn't that awesome with a lot of features and great design
+        brought to you by PixFort.</p>
+    </div>
+
     <div class="subscription">
       <input type="text" placeholder="Enter Your Email">
       <button type="submit">SUBSCRIBE NOW</button>
@@ -19,6 +28,7 @@
 
     <p class="smaller">*Note: Bundle ends in two weeks from now.</p>
   </div>
-  
+
 </body>
+
 </html>
