astuntos uzduoties kelimas

--- a/1diena/8.uzduotis/index.html
+++ b/1diena/8.uzduotis/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>8 užduotis</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
+
 <body>
+
   <div class="container">
-    <div>
+    <div class="text-box">
       <h1>Cutting Edge HTML Form Builder</h1>
-      <p>Eventbrite is the world's largest self-service ticketing platform. We build the technology to allow anyone to create, share, find and attend new things to do that fuel their passions and enrich their lives.</p>
+      <p>Eventbrite is the world's largest self-service ticketing platform. We build the technology to allow anyone to
+        create, share, find and attend new things to do that fuel their passions and enrich their lives.</p>
+    </div>
+    <div class="form">
+      <form action="index.html">
+        <input type="text" placeholder="Your Full Name">
+        <input type="text" placeholder="Your Email">
+        <textarea placeholder="Write your Message Here" rows="7"></textarea>
+        <input type="submit" value="Send Information">
+      </form>
+
+      <p>*Some awesome dummy text goes here.</p>
     </div>
   </div>
+
 </body>
+
 </html>
