antros dienos mogo ikelimas

--- a/3diena/mogo-projektas/index.html
+++ b/3diena/mogo-projektas/index.html
@@ -17,56 +17,594 @@
 <body>
 
   <!-- home page -->
-  <header>
-    <nav>
-      <div class="logo">
-        <h3><a href="#">MoGo</a></h3>
+
+  <section id="home">
+    <header>
+      <nav>
+        <div class="logo">
+          <h3><a href="#home">MoGo</a></h3>
+        </div>
+
+        <div class="navbar">
+          <ul>
+            <li class="active"><a href="#about">ABOUT</a></li>
+            <li><a href="#service">SERVICE</a></li>
+            <li><a href="#works">WORK</a></li>
+            <li><a href="#blog">BLOG</a></li>
+            <li><a href="#contacts">CONTACT</a></li>
+            <li><a href="#"><img src="images/icons/SHOPPING CART.png" alt="cart"></a></li>
+            <li><a href="#"><img src="images/icons/MAGNIFYING GLASS.png" alt="search"></a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="content">
+        <h2>Creative Template</h2>
+        <h1>WELCOME TO MOGO</h1>
+        <div class="grey-line"></div>
+        <button type="button"><a href="#">LEARN MORE</a></button>
+
+        <div class="main-bottom">
+          <div class="intro">
+            <div class="red-white-line"></div>
+            <h4>01 <span>INTRO</span></h4>
+          </div>
+          <div class="work">
+            <div class="long-line"></div>
+            <h4>02 <span>WORK</span></h4>
+          </div>
+          <div class="about">
+            <div class="long-line"></div>
+            <h4>03 <span>ABOUT</span></h4>
+          </div>
+          <div class="contacts">
+            <div class="long-line"></div>
+            <h4>04 <span>CONTACTS</span></h4>
+          </div>
+        </div>
+      </div>
+    </header>
+
+  </section>
+
+  <!-- about section -->
+
+  <section class="about" id="about">
+
+    <div class="container">
+
+      <div class="title">
+        <h4>What we do</h4>
+        <h3>STORY ABOUT US</h3>
+        <div class="red-line"></div>
+        <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus commodi esse placeat qui, quam nemo ipsa
+          corrupti nam neque laborum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
       </div>
 
-      <div class="navbar">
-        <ul>
-          <li class="active"><a href="#">ABOUT</a></li>
-          <li><a href="#">SERVICE</a></li>
-          <li><a href="#">WORK</a></li>
-          <li><a href="#">BLOG</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#"><img src="images/icons/SHOPPING CART.png" alt="cart"></a></li>
-          <li><a href="#"><img src="images/icons/MAGNIFYING GLASS.png" alt="search"></a></li>
-        </ul>
+      <div class="image-row">
+        <img src="images/superteam.png" alt="superteam">
+        <img src="images/picture_2.jpg" alt="desk">
+        <img src="images/picture_3.jpg" alt="desk2">
       </div>
-    </nav>
 
-    <div class="content">
-      <h2>Creative Template</h2>
-      <h1>WELCOME TO MOGO</h1>
-      <div class="grey-line"></div>
-      <button type="button"><a href="#">LEARN MORE</a></button>
     </div>
 
-    <div class="main-bottom">
-      <div class="intro">
-        <div class="long-line"></div>
-        <h4>01</h4>
-        <p>INTRO</p>
+  </section>
+
+  <!-- statistics -->
+
+  <div class="statistics">
+
+    <div class="container">
+      <div class="stat-info">
+        <h2>42</h2>
+        <p>Web design projects</p>
       </div>
-      <div class="work">
-        <div class="long-line"></div>
-        <h4>02</h4>
-        <p>WORK</p>
+      <div class="stat-info">
+        <h2>123</h2>
+        <p>Happy client</p>
       </div>
-      <div class="about">
-        <div class="long-line"></div>
-        <h4>03</h4>
-        <p>ABOUT</p>
+      <div class="stat-info">
+        <h2>15</h2>
+        <p>Award winner</p>
       </div>
+      <div class="stat-info">
+        <h2>99</h2>
+        <p>Cup of coffee</p>
+      </div>
+      <div class="stat-info">
+        <h2>24</h2>
+        <p>Members</p>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- service section -->
+
+  <section class="section" id="service">
+
+    <div class="container">
+
+      <div class="title">
+        <h4>We work with</h4>
+        <h3>AMAZING SERVICES</h3>
+        <div class="red-line"></div>
+      </div>
+
+      <div class="services">
+        <div class="service-item">
+          <div class="service-icon">
+            <img src="images/icons/ALARM.png" alt="clock">
+          </div>
+          <div class="service-text">
+            <h5>PHOTOGRAPHY</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
+          </div>
+        </div>
+        <div class="service-item">
+          <div class="service-icon">
+            <img src="images/icons/LINE GRAPH.png" alt="graph">
+          </div>
+          <div class="service-text">
+            <h5>WEB DESIGN</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
+          </div>
+        </div>
+        <div class="service-item">
+          <div class="service-icon">
+            <img src="images/icons/COMPUTER _ OK.png" alt="computer">
+          </div>
+          <div class="service-text">
+            <h5>CREATIVITY</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="services">
+        <div class="service-item">
+          <div class="service-icon">
+            <img src="images/icons/BOOK 2.png" alt="book">
+          </div>
+          <div class="service-text">
+            <h5>SEO</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
+          </div>
+        </div>
+        <div class="service-item">
+          <div class="service-icon">
+            <img src="images/icons/HOME.png" alt="home">
+          </div>
+          <div class="service-text">
+            <h5>CSS/HTML</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
+          </div>
+        </div>
+        <div class="service-item">
+          <div class="service-icon">
+            <img src="images/icons/IMAGE.png" alt="digital">
+          </div>
+          <div class="service-text">
+            <h5>DIGITAL</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
+  <!-- devices section-->
+
+  <section class="section devices">
+
+    <div class="container">
+      <div class="title">
+        <h4>We work with</h4>
+        <h3>AMAZING SERVICES</h3>
+        <div class="red-line"></div>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- what we do section -->
+
+  <section class="section what-we-do">
+
+    <div class="container">
+
+      <div class="title">
+        <h4>Service</h4>
+        <h3>WHAT WE DO</h3>
+        <div class="red-line"></div>
+        <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus commodi esse placeat qui, quam nemo ipsa
+          corrupti nam neque laborum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+      </div>
+
+      <div class="activity-section">
+        <div class="picture">
+          <img src="images/picture_4.jpg" alt="photo-wall">
+        </div>
+
+        <div class="activity">
+          <div class="activity-item">
+            <div class="activity-icon">
+              <img src="images/icons/PICTURE.png" alt="picture">
+            </div>
+            <div class="activity-text">
+              <h5>PHOTOGRAPHY</h5>
+            </div>
+            <div class="activity-icon">
+              <img src="images/icons/ARROW _ up.png" alt="arrow-up">
+            </div>
+          </div>
+
+          <div class="activity-item">
+            <div class="activity-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dicta nemo eaque fugit voluptates ex
+                excepturi adipisci. Doloribus, dicta? Officia?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Fugit vel optio a hic maiores temporibus molestiae ex, consectetur ipsam architecto. Fugit vel optio a
+                hic maiores temporibus molestiae ex, consectetur ipsam architecto. Fugit vel optio a hic maiores
+                temporibus molestiae ex, consectetur ipsam architecto. </p>
+            </div>
+            <div class="activity-icon">
+              <img src="images/icons/scrollbar_line.png" alt="scroll-line">
+            </div>
+          </div>
+
+          <div class="activity-item">
+            <div class="activity-icon">
+              <img src="images/icons/EQUALIZER.png" alt="equalizer">
+            </div>
+            <div class="activity-text">
+              <h5>CREATIVITY</h5>
+            </div>
+            <div class="activity-icon">
+              <img src="images/icons/ARROW _ DOWN.png" alt="arrow-up">
+            </div>
+          </div>
+
+          <div class="activity-item">
+            <div class="activity-icon">
+              <img src="images/icons/BULLSEYE (1).png" alt="bullseye">
+            </div>
+            <div class="activity-text">
+              <h5>WEB DESIGN</h5>
+            </div>
+            <div class="activity-icon">
+              <img src="images/icons/ARROW _ DOWN.png" alt="arrow-up">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
+  <!-- reviews section 1 -->
+
+  <div class="section reviews-section-one">
+
+    <div class="container">
+      <div class="review-items">
+        <div class="review-item-icon">
+          <img src="images/icons/ARROW _ left.png" alt="left-arrow">
+        </div>
+
+        <div class="review-item-picture">
+          <img src="images/icons/SPEECH 4.png" alt="speech">
+        </div>
+
+        <div class="review-item-text">
+          <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod soluta laudantium, numquam mollitia libero
+            ratione odio repudiandae similique corrupti neque!"</p>
+          <div class="red-line"></div>
+          <h4>Jon Doe</h4>
+        </div>
+
+        <div class="review-item-icon">
+          <img src="images/icons/ARROW _ right.png" alt="right-arrow">
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- team section -->
+
+  <section class="section team">
+
+    <div class="container">
+
+      <div class="title">
+        <h4>Service</h4>
+        <h3>WHAT WE DO</h3>
+        <div class="red-line"></div>
+        <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus commodi esse placeat qui, quam nemo ipsa
+          corrupti nam neque laborum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+      </div>
+
+      <div class="team-row">
+        <div class="team-member">
+          <img src="images/picture_13.png" alt="graphic-designer">
+          <h5>MATTHEW DIX</h5>
+          <p>Graphic design</p>
+        </div>
+
+        <div class="team-member">
+          <img src="images/picture_5.jpg" alt="branding-designer">
+          <h5>CHRISTOPHER CAMPBELL</h5>
+          <p>Branding/UX design</p>
+        </div>
+
+        <div class="team-member">
+          <img src="images/picture_7.jpg" alt="developer">
+          <h5>MICHAEL FERTIG</h5>
+          <p>Developer</p>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
+  <!-- logo section -->
+
+  <div class="section logo">
+
+    <div class="container">
+      <div class="logo-image">
+        <img src="images/partners.jpg" alt="logo">
+      </div>
+    </div>
+
+  </div>
+
+  <!-- works section -->
+
+  <section class="section" id="works">
+
+    <div class="container">
+
+      <div class="title">
+        <h4>What we do</h4>
+        <h3>SOME OF OUR WORK</h3>
+        <div class="red-line"></div>
+        <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus commodi esse placeat qui, quam nemo ipsa
+          corrupti nam neque laborum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+      </div>
+    </div>
+
+    <div class="works-pictures">
+      <img src="images/pic1.jpg" alt="pic1">
+      <img src="images/pic3.jpg" alt="pic2">
+      <img src="images/pic2.jpg" alt="pic3">
+      <img src="images/pic4.jpg" alt="pic4">
+      <img src="images/pic5.jpg" alt="pic5">
+      <img src="images/pic6.jpg" alt="pic6">
+      <img src="images/pic7.jpg" alt="pic7">
+    </div>
+  </section>
+
+  <!-- reviews section 2 -->
+
+  <div class="section review-section-two">
+
+    <div class="container">
+      <div class="review-items">
+        <div class="review-item-icon">
+          <img src="images/icons/ARROW _ left.png" alt="left-arrow">
+        </div>
+
+        <div class="review-item-picture">
+          <img src="images/picture_8.png" alt="speech">
+        </div>
+
+        <div class="review-item-text">
+          <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod soluta laudantium, numquam mollitia libero
+            ratione odio repudiandae similique corrupti neque!"</p>
+          <div class="red-line"></div>
+          <h4>Jon Doe</h4>
+        </div>
+
+        <div class="review-item-icon">
+          <img src="images/icons/ARROW _ right.png" alt="right-arrow">
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- clients section-->
+
+  <section class="section client-section">
+
+    <div class="container">
+      <div class="title">
+        <h4>Happy Clients</h4>
+        <h3>WHAT PEOPLE SAY</h3>
+        <div class="red-line"></div>
+      </div>
+
+      <div class="client-reviews">
+        <div class="client-row">
+          <div class="client">
+            <img src="images/picture_9.png" alt="client1">
+            <h5>MATTHEW DIX</h5>
+            <p>Graphic Design</p>
+            <div class="red-line"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
+              ullam? Culpa sapiente aut repellendus non nobis totam ipsam, ab neque ea reiciendis doloremque porro
+              error!</p>
+          </div>
+
+          <div class="client">
+            <img src="images/picture_10.png" alt="client10">
+            <h5>NICK KARVOUNIS</h5>
+            <p>Graphic Design</p>
+            <div class="red-line"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
+              ullam? Culpa sapiente aut repellendus non nobis totam ipsam, ab neque ea reiciendis doloremque porro
+              error!</p>
+          </div>
+        </div>
+
+        <div class="client-row">
+          <div class="client">
+            <img src="images/picture_11.png" alt="client11">
+            <h5>JAELYNN CASTILLO</h5>
+            <p>Graphic Design</p>
+            <div class="red-line"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
+              ullam? Culpa sapiente aut repellendus non nobis totam ipsam, ab neque ea reiciendis doloremque porro
+              error!</p>
+          </div>
+
+          <div class="client">
+            <img src="images/picture_12.png" alt="client12">
+            <h5>MIKE PETRUCCI</h5>
+            <p>Graphic Design</p>
+            <div class="red-line"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
+              ullam? Culpa sapiente aut repellendus non nobis totam ipsam, ab neque ea reiciendis doloremque porro
+              error!</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </section>
+
+  <!-- blog section-->
+
+  <section class="section" id="blog">
+
+    <div class="container">
+      <div class="title">
+        <h4>Our stories</h4>
+        <h3>LATEST BLOG</h3>
+        <div class="red-line"></div>
+
+      </div>
+
+
+      <div class="blog-row">
+        <div class="article">
+          <img src="images/15 Jan.png" alt="article1">
+          <h5>Lorem ipsum dolor sit amet.</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
+
+        </div>
+
+        <div class="article">
+          <img src="images/14 Jan.png" alt="article2">
+          <h5>Lorem ipsum dolor sit amet.</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
+
+        </div>
+
+        <div class="article">
+          <img src="images/12 Jan.png" alt="article3">
+          <h5>Lorem ipsum dolor sit amet.</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
+
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- map section-->
+
+  <section class="section map">
+
+    <div class="container">
+
+      <div class="map-link">
+        <img src="images/icons/PIN 2.png" alt="pin">
+        <h4>OPEN MAP</h4>
+        <div class="red-line"></div>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- contacts -->
+
+  <footer id="contacts">
+
+    <div class="container">
+
       <div class="contacts">
-        <div class="long-line"></div>
-        <h4>04</h4>
-        <p>CONTACTS</p>
+        <h6>MoGo</h6>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab exercitationem cum repellendus accusantium saepe ratione obcaecati ea. Beatae eius earum ab ipsum quaerat est labore dolore pariatur aspernatur, ex non.</p>
+
+        <p>15k followers</p>
+
+        <!-- folow us  icons-->
+
+
+        <!-- subscribe -->
+
+        <div class="form">
+          <input type="email" placeholder="Your Email">
+          <input type="submit" value="subscribe">
+        </div>
       </div>
 
-    </div>
-  </header>
+      <div class="blogs">
+        <h5>BLOGS</h5>
+
+        <!-- CIA TURI BUTI NE H5, REIKIA PERZIURETI SRIFTUS IR DYDZIUS -->
+        <div class="blog-post">
+          <img src="images/blog_photo.png" alt="blog1">
+          <h5>Lorem ipsum, dolor sit amet consectetur adipisicing.</h5>
+          <p>Jan 9, 2016</p>
+        </div>
+
+        <div class="blog-post">
+          <img src="images/blog_photo1.png" alt="blog2">
+          <h5>Lorem ipsum dolor, sit amet consectetur adipisicing.</h5>
+          <p>Jan 9, 2016</p>
+        </div>
+
+        <div class="blog-post">
+          <img src="images/blog_photo_2.png" alt="blog3">
+          <h5>Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
+          <p>Jan 9, 2016</p>
+        </div>
+      </div>
+
+      <div class="instagram">
+        <h5>INSTAGRAM</h5>
+          <img src="images/instagramphoto1.png" alt="insta1">
+          <img src="images/instagramphoto2.png" alt="insta2">
+          <img src="images/instagramphoto3.png" alt="insta3">
+          <img src="images/instagramphoto4.png" alt="insta4">
+          <img src="images/instagramphoto5.png" alt="insta5">
+          <img src="images/instagramphoto6.png" alt="insta6">
+          <img src="images/instagramphoto7.png" alt="insta7">
+          <img src="images/instagramphoto8.png" alt="insta8">
+          <img src="images/instagramphoto9.png" alt="insta9">
+          <p><a href="#">View more photos</a></p>
+      </div>
+
+
+      <div class="copyright">
+
+        <p>&copy; 2016 MoGo free PSD template by Laaqiq</p>
+
+      </div>
+    </div> 
+    
+
+  </footer>
 
 </body>
 
