--- a/3diena/mogo-projektas/index.html
+++ b/3diena/mogo-projektas/index.html
@@ -42,7 +42,7 @@
         <h2>Creative Template</h2>
         <h1>WELCOME TO MOGO</h1>
         <div class="grey-line"></div>
-        <button type="button"><a href="#">LEARN MORE</a></button>
+        <button type="button"><a href="#about">LEARN MORE</a></button>
 
         <div class="main-bottom">
           <div class="intro">
@@ -172,6 +172,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
+
         <div class="service-item">
           <div class="service-icon">
             <img src="images/icons/HOME.png" alt="home">
@@ -181,6 +182,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
+
         <div class="service-item">
           <div class="service-icon">
             <img src="images/icons/IMAGE.png" alt="digital">
@@ -247,8 +249,7 @@
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dicta nemo eaque fugit voluptates ex
                 excepturi adipisci. Doloribus, dicta? Officia?Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Fugit vel optio a hic maiores temporibus molestiae ex, consectetur ipsam architecto. Fugit vel optio a
-                hic maiores temporibus molestiae ex, consectetur ipsam architecto. Fugit vel optio a hic maiores
-                temporibus molestiae ex, consectetur ipsam architecto. </p>
+                hic maiores temporibus molestiae ex, consectetur ipsam architecto. </p>
             </div>
             <div class="activity-icon">
               <img src="images/icons/scrollbar_line.png" alt="scroll-line">
@@ -354,11 +355,11 @@
 
   <!-- logo section -->
 
-  <div class="section logo">
+  <div class="section logos">
 
     <div class="container">
       <div class="logo-image">
-        <img src="images/partners.jpg" alt="logo">
+        <img src="images/logos.png" alt="logo">
       </div>
     </div>
 
@@ -380,13 +381,7 @@
     </div>
 
     <div class="works-pictures">
-      <img src="images/pic1.jpg" alt="pic1">
-      <img src="images/pic3.jpg" alt="pic2">
-      <img src="images/pic2.jpg" alt="pic3">
-      <img src="images/pic4.jpg" alt="pic4">
-      <img src="images/pic5.jpg" alt="pic5">
-      <img src="images/pic6.jpg" alt="pic6">
-      <img src="images/pic7.jpg" alt="pic7">
+      <img src="images/background_pictures.jpg" alt="multiple-images">
     </div>
   </section>
 
@@ -433,45 +428,57 @@
       <div class="client-reviews">
         <div class="client-row">
           <div class="client">
-            <img src="images/picture_9.png" alt="client1">
-            <h5>MATTHEW DIX</h5>
-            <p>Graphic Design</p>
-            <div class="red-line"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
-              ullam? Culpa sapiente aut repellendus non nobis totam ipsam, ab neque ea reiciendis doloremque porro
-              error!</p>
+            <div class="client-image">
+              <img src="images/picture_9.png" alt="client1">
+            </div>
+            <div class="client-info">
+              <h5>MATTHEW DIX</h5>
+              <p><i>Graphic Design</i></p>
+              <div class="red-line"></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
+                ullam! Lorem ipsum dolor sit, amet consectetur.</p>
+            </div>
           </div>
 
           <div class="client">
-            <img src="images/picture_10.png" alt="client10">
-            <h5>NICK KARVOUNIS</h5>
-            <p>Graphic Design</p>
-            <div class="red-line"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
-              ullam? Culpa sapiente aut repellendus non nobis totam ipsam, ab neque ea reiciendis doloremque porro
-              error!</p>
+            <div class="client-image">
+              <img src="images/picture_10.png" alt="client2">
+            </div>
+            <div class="client-info">
+              <h5>NICK KARVOUNIS</h5>
+              <p><i>Graphic Design</i></p>
+              <div class="red-line"></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
+                ullam! Lorem ipsum dolor sit, amet consectetur.</p>
+            </div>
           </div>
         </div>
 
         <div class="client-row">
           <div class="client">
-            <img src="images/picture_11.png" alt="client11">
-            <h5>JAELYNN CASTILLO</h5>
-            <p>Graphic Design</p>
-            <div class="red-line"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
-              ullam? Culpa sapiente aut repellendus non nobis totam ipsam, ab neque ea reiciendis doloremque porro
-              error!</p>
+            <div class="client-image">
+              <img src="images/picture_11.png" alt="client3">
+            </div>
+            <div class="client-info">
+              <h5>JAELYNN CASTILLO</h5>
+              <p><i>Graphic Design</i></p>
+              <div class="red-line"></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
+                ullam! Lorem ipsum dolor sit, amet consectetur.</p>
+            </div>
           </div>
 
           <div class="client">
-            <img src="images/picture_12.png" alt="client12">
-            <h5>MIKE PETRUCCI</h5>
-            <p>Graphic Design</p>
-            <div class="red-line"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
-              ullam? Culpa sapiente aut repellendus non nobis totam ipsam, ab neque ea reiciendis doloremque porro
-              error!</p>
+            <div class="client-image">
+              <img src="images/picture_12.png" alt="client4">
+            </div>
+            <div class="client-info">
+              <h5>MIKE PETRUCCI</h5>
+              <p><i>Graphic Design</i></p>
+              <div class="red-line"></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
+                ullam! Lorem ipsum dolor sit, amet consectetur.</p>
+            </div>
           </div>
         </div>
 
@@ -489,30 +496,59 @@
         <h4>Our stories</h4>
         <h3>LATEST BLOG</h3>
         <div class="red-line"></div>
-
       </div>
 
 
       <div class="blog-row">
         <div class="article">
           <img src="images/15 Jan.png" alt="article1">
-          <h5>Lorem ipsum dolor sit amet.</h5>
+          <h5>Lorem ipsum dolor sit amet</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
+          <div class="views-comments">
+            <div class="views">
+              <img src="images/icons/VIEW.png" alt="view">
+              <p>542</p>
+            </div>
+            <div class="comments">
+              <img src="images/icons/SPEECH BUBBLE 2.png" alt="comments">
+              <p>17</p>
+            </div>
 
+          </div>
         </div>
 
         <div class="article">
           <img src="images/14 Jan.png" alt="article2">
-          <h5>Lorem ipsum dolor sit amet.</h5>
+          <h5>Lorem ipsum dolor sit amet</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
+          <div class="views-comments">
+            <div class="views">
+              <img src="images/icons/VIEW.png" alt="view">
+              <p>992</p>
+            </div>
 
+            <div class="comments">
+              <img src="images/icons/SPEECH BUBBLE 2.png" alt="comments">
+              <p>42</p>
+            </div>
+          </div>
         </div>
 
         <div class="article">
           <img src="images/12 Jan.png" alt="article3">
-          <h5>Lorem ipsum dolor sit amet.</h5>
+          <h5>Lorem ipsum dolor sit amet</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
+          <div class="views-comments">
+            <div class="views">
+              <img src="images/icons/VIEW.png" alt="view">
+              <p>1560</p>
+            </div>
 
+            <div class="comments">
+              <img src="images/icons/SPEECH BUBBLE 2.png" alt="comments">
+              <p>98</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -527,7 +563,7 @@
 
       <div class="map-link">
         <img src="images/icons/PIN 2.png" alt="pin">
-        <h4>OPEN MAP</h4>
+        <h4><a href="https://maps.google.com/" target="_blank">OPEN MAP</a></h4>
         <div class="red-line"></div>
       </div>
     </div>
@@ -543,17 +579,36 @@
       <div class="contacts">
         <h6>MoGo</h6>
 
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab exercitationem cum repellendus accusantium saepe ratione obcaecati ea. Beatae eius earum ab ipsum quaerat est labore dolore pariatur aspernatur, ex non.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab exercitationem cum repellendus accusantium saepe
+          ratione obcaecati ea. Beatae eius earum ab ipsum quaerat est labore dolore pariatur aspernatur, ex non.</p>
 
-        <p>15k followers</p>
 
-        <!-- folow us  icons-->
+        <div class="follow-part">
+          <p><b>15k</b> followers</p>
 
+          <!-- follow us  icons-->
+
+          <div class="follow-us">
+            <p>Follow Us:</p>
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/icons/facebook.png" alt="facebook"></a>
+            <a href="https://twitter.com/" target="_blank"><img src="images/icons/twitter.png" alt="twitter"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="images/icons/instagram.png"
+                alt="instagram"></a>
+            <a href="https://www.pinterest.com/" target="_blank"><img src="images/icons/pinterest.png"
+                alt="pinterest"></a>
+            <a href="https://myaccount.google.com/" target="_blank"><img src="images/icons/google plus.png"
+                alt="google+"></a>
+            <a href="https://www.youtube.com/" target="_blank"><img src="images/icons/youtube.png" alt="youtube"></a>
+            <a href="https://dribbble.com/" target="_blank"><img src="images/icons/dribbble.png" alt="dribble"></a>
+            <a href="https://www.tumblr.com/" target="_blank"><img src="images/icons/tumblr.png" alt="tumblr"></a>
+          </div>
+
+        </div>
 
         <!-- subscribe -->
 
         <div class="form">
-          <input type="email" placeholder="Your Email">
+          <input type="email" placeholder="Your Email...">
           <input type="submit" value="subscribe">
         </div>
       </div>
@@ -563,46 +618,58 @@
 
         <!-- CIA TURI BUTI NE H5, REIKIA PERZIURETI SRIFTUS IR DYDZIUS -->
         <div class="blog-post">
-          <img src="images/blog_photo.png" alt="blog1">
-          <h5>Lorem ipsum, dolor sit amet consectetur adipisicing.</h5>
-          <p>Jan 9, 2016</p>
+          <div class="blog-post-image">
+            <img src="images/blog_photo.png" alt="blog1">
+          </div>
+
+          <div class="blog-post-info">
+            <h5>Lorem ipsum, dolor sit amet consectetur adipisicing.</h5>
+            <p>Jan 9, 2016</p>
+          </div>
+
         </div>
 
         <div class="blog-post">
-          <img src="images/blog_photo1.png" alt="blog2">
-          <h5>Lorem ipsum dolor, sit amet consectetur adipisicing.</h5>
-          <p>Jan 9, 2016</p>
+          <div class="blog-post-image">
+            <img src="images/blog_photo1.png" alt="blog2">
+          </div>
+          <div class="blog-post-info">
+            <h5>Lorem ipsum, dolor sit amet consectetur adipisicing.</h5>
+            <p>Jan 9, 2016</p>
+          </div>
         </div>
 
         <div class="blog-post">
-          <img src="images/blog_photo_2.png" alt="blog3">
-          <h5>Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
-          <p>Jan 9, 2016</p>
+          <div class="blog-post-image">
+            <img src="images/blog_photo_2.png" alt="blog3">
+          </div>
+          <div class="blog-post-info">
+            <h5>Lorem ipsum, dolor sit amet consectetur adipisicing.</h5>
+            <p>Jan 9, 2016</p>
+          </div>
         </div>
       </div>
 
       <div class="instagram">
         <h5>INSTAGRAM</h5>
-          <img src="images/instagramphoto1.png" alt="insta1">
-          <img src="images/instagramphoto2.png" alt="insta2">
-          <img src="images/instagramphoto3.png" alt="insta3">
-          <img src="images/instagramphoto4.png" alt="insta4">
-          <img src="images/instagramphoto5.png" alt="insta5">
-          <img src="images/instagramphoto6.png" alt="insta6">
-          <img src="images/instagramphoto7.png" alt="insta7">
-          <img src="images/instagramphoto8.png" alt="insta8">
-          <img src="images/instagramphoto9.png" alt="insta9">
-          <p><a href="#">View more photos</a></p>
+        <img src="images/instagramphoto1.png" alt="insta1">
+        <img src="images/instagramphoto2.png" alt="insta2">
+        <img src="images/instagramphoto3.png" alt="insta3">
+        <img src="images/instagramphoto4.png" alt="insta4">
+        <img src="images/instagramphoto5.png" alt="insta5">
+        <img src="images/instagramphoto6.png" alt="insta6">
+        <img src="images/instagramphoto7.png" alt="insta7">
+        <img src="images/instagramphoto8.png" alt="insta8">
+        <img src="images/instagramphoto9.png" alt="insta9">
+        <p><a href="#">View more photos</a></p>
       </div>
 
 
       <div class="copyright">
-
-        <p>&copy; 2016 MoGo free PSD template by Laaqiq</p>
-
+        <p>&copy; 2016 MoGo free PSD template by <span>Laaqiq</span></p>
       </div>
-    </div> 
-    
+    </div>
+
 
   </footer>
 
