ketvirtos dienos mogo ikelimas

--- a/3diena/mogo-projektas/index.html
+++ b/3diena/mogo-projektas/index.html
@@ -138,7 +138,7 @@
             <img src="images/icons/ALARM.png" alt="clock">
           </div>
           <div class="service-text">
-            <h5>PHOTOGRAPHY</h5>
+            <h6>PHOTOGRAPHY</h6>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
@@ -147,7 +147,7 @@
             <img src="images/icons/LINE GRAPH.png" alt="graph">
           </div>
           <div class="service-text">
-            <h5>WEB DESIGN</h5>
+            <h6>WEB DESIGN</h6>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
@@ -156,7 +156,7 @@
             <img src="images/icons/COMPUTER _ OK.png" alt="computer">
           </div>
           <div class="service-text">
-            <h5>CREATIVITY</h5>
+            <h6>CREATIVITY</h6>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
@@ -168,7 +168,7 @@
             <img src="images/icons/BOOK 2.png" alt="book">
           </div>
           <div class="service-text">
-            <h5>SEO</h5>
+            <h6>SEO</h6>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
@@ -178,7 +178,7 @@
             <img src="images/icons/HOME.png" alt="home">
           </div>
           <div class="service-text">
-            <h5>CSS/HTML</h5>
+            <h6>CSS/HTML</h6>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
@@ -188,7 +188,7 @@
             <img src="images/icons/IMAGE.png" alt="digital">
           </div>
           <div class="service-text">
-            <h5>DIGITAL</h5>
+            <h6>DIGITAL</h6>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
@@ -237,7 +237,7 @@
               <img src="images/icons/PICTURE.png" alt="picture">
             </div>
             <div class="activity-text">
-              <h5>PHOTOGRAPHY</h5>
+              <h6>PHOTOGRAPHY</h6>
             </div>
             <div class="activity-icon">
               <img src="images/icons/ARROW _ up.png" alt="arrow-up">
@@ -261,10 +261,10 @@
               <img src="images/icons/EQUALIZER.png" alt="equalizer">
             </div>
             <div class="activity-text">
-              <h5>CREATIVITY</h5>
+              <h6>CREATIVITY</h6>
             </div>
             <div class="activity-icon">
-              <img src="images/icons/ARROW _ DOWN.png" alt="arrow-up">
+              <img src="images/icons/ARROW _ DOWN.png" alt="arrow-down">
             </div>
           </div>
 
@@ -273,10 +273,10 @@
               <img src="images/icons/BULLSEYE (1).png" alt="bullseye">
             </div>
             <div class="activity-text">
-              <h5>WEB DESIGN</h5>
+              <h6>WEB DESIGN</h6>
             </div>
             <div class="activity-icon">
-              <img src="images/icons/ARROW _ DOWN.png" alt="arrow-up">
+              <img src="images/icons/ARROW _ DOWN.png" alt="arrow-down">
             </div>
           </div>
         </div>
@@ -332,19 +332,19 @@
       <div class="team-row">
         <div class="team-member">
           <img src="images/picture_13.png" alt="graphic-designer">
-          <h5>MATTHEW DIX</h5>
+          <h6>MATTHEW DIX</h6>
           <p>Graphic design</p>
         </div>
 
         <div class="team-member">
           <img src="images/picture_5.jpg" alt="branding-designer">
-          <h5>CHRISTOPHER CAMPBELL</h5>
+          <h6>CHRISTOPHER CAMPBELL</h6>
           <p>Branding/UX design</p>
         </div>
 
         <div class="team-member">
           <img src="images/picture_7.jpg" alt="developer">
-          <h5>MICHAEL FERTIG</h5>
+          <h6>MICHAEL FERTIG</h6>
           <p>Developer</p>
         </div>
       </div>
@@ -380,8 +380,25 @@
       </div>
     </div>
 
-    <div class="works-pictures">
-      <img src="images/background_pictures.jpg" alt="multiple-images">
+    <div class="works-images">
+      <div class="images-block">
+        <img src="images/pic1.jpg" alt="1">
+        <img src="images/pic3.jpg" alt="2">
+      </div>
+
+      <div class="images-block">
+        <img src="images/pic5.jpg" alt="5">
+        <img src="images/pic6.jpg" alt="6">
+      </div>
+
+      <div class="images-block">
+        <img src="images/pic2.jpg" alt="3">
+      </div>
+      <div class="images-block">
+        <img src="images/pic4.jpg" alt="4">
+        <img src="images/pic7.jpg" alt="7">
+      </div>
+
     </div>
   </section>
 
@@ -432,7 +449,7 @@
               <img src="images/picture_9.png" alt="client1">
             </div>
             <div class="client-info">
-              <h5>MATTHEW DIX</h5>
+              <h6>MATTHEW DIX</h6>
               <p><i>Graphic Design</i></p>
               <div class="red-line"></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
@@ -445,7 +462,7 @@
               <img src="images/picture_10.png" alt="client2">
             </div>
             <div class="client-info">
-              <h5>NICK KARVOUNIS</h5>
+              <h6>NICK KARVOUNIS</h6>
               <p><i>Graphic Design</i></p>
               <div class="red-line"></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
@@ -460,7 +477,7 @@
               <img src="images/picture_11.png" alt="client3">
             </div>
             <div class="client-info">
-              <h5>JAELYNN CASTILLO</h5>
+              <h6>JAELYNN CASTILLO</h6>
               <p><i>Graphic Design</i></p>
               <div class="red-line"></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
@@ -473,7 +490,7 @@
               <img src="images/picture_12.png" alt="client4">
             </div>
             <div class="client-info">
-              <h5>MIKE PETRUCCI</h5>
+              <h6>MIKE PETRUCCI</h6>
               <p><i>Graphic Design</i></p>
               <div class="red-line"></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci nobis fugit recusandae dolorum
@@ -502,7 +519,7 @@
       <div class="blog-row">
         <div class="article">
           <img src="images/15 Jan.png" alt="article1">
-          <h5>Lorem ipsum dolor sit amet</h5>
+          <h6>Lorem ipsum dolor sit amet</h6>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
           <div class="views-comments">
             <div class="views">
@@ -519,7 +536,7 @@
 
         <div class="article">
           <img src="images/14 Jan.png" alt="article2">
-          <h5>Lorem ipsum dolor sit amet</h5>
+          <h6>Lorem ipsum dolor sit amet</h6>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
           <div class="views-comments">
             <div class="views">
@@ -536,7 +553,7 @@
 
         <div class="article">
           <img src="images/12 Jan.png" alt="article3">
-          <h5>Lorem ipsum dolor sit amet</h5>
+          <h6>Lorem ipsum dolor sit amet</h6>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
           <div class="views-comments">
             <div class="views">
@@ -577,7 +594,7 @@
     <div class="container">
 
       <div class="contacts">
-        <h6>MoGo</h6>
+        <h5>MoGo</h5>
 
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab exercitationem cum repellendus accusantium saepe
           ratione obcaecati ea. Beatae eius earum ab ipsum quaerat est labore dolore pariatur aspernatur, ex non.</p>
@@ -614,7 +631,7 @@
       </div>
 
       <div class="blogs">
-        <h5>BLOGS</h5>
+        <h6>BLOGS</h6>
 
         <!-- CIA TURI BUTI NE H5, REIKIA PERZIURETI SRIFTUS IR DYDZIUS -->
         <div class="blog-post">
@@ -623,7 +640,7 @@
           </div>
 
           <div class="blog-post-info">
-            <h5>Lorem ipsum, dolor sit amet consectetur adipisicing.</h5>
+            <h6>Lorem ipsum, dolor sit amet consectetur adipisicing.</h6>
             <p>Jan 9, 2016</p>
           </div>
 
@@ -634,7 +651,7 @@
             <img src="images/blog_photo1.png" alt="blog2">
           </div>
           <div class="blog-post-info">
-            <h5>Lorem ipsum, dolor sit amet consectetur adipisicing.</h5>
+            <h6>Lorem ipsum, dolor sit amet consectetur adipisicing.</h6>
             <p>Jan 9, 2016</p>
           </div>
         </div>
@@ -644,14 +661,14 @@
             <img src="images/blog_photo_2.png" alt="blog3">
           </div>
           <div class="blog-post-info">
-            <h5>Lorem ipsum, dolor sit amet consectetur adipisicing.</h5>
+            <h6>Lorem ipsum, dolor sit amet consectetur adipisicing.</h6>
             <p>Jan 9, 2016</p>
           </div>
         </div>
       </div>
 
       <div class="instagram">
-        <h5>INSTAGRAM</h5>
+        <h6>INSTAGRAM</h6>
         <img src="images/instagramphoto1.png" alt="insta1">
         <img src="images/instagramphoto2.png" alt="insta2">
         <img src="images/instagramphoto3.png" alt="insta3">
