penktos dienos mogo ikelimas

--- a/3diena/mogo-projektas/index.html
+++ b/3diena/mogo-projektas/index.html
@@ -16,10 +16,12 @@
 
 <body>
 
-  <!-- home page -->
+  <!-- home page section -->
 
   <section id="home">
     <header>
+
+      <!-- navigation -->
       <nav>
         <div class="logo">
           <h3><a href="#home">MoGo</a></h3>
@@ -91,7 +93,7 @@
 
   </section>
 
-  <!-- statistics -->
+  <!-- statistics part-->
 
   <div class="statistics">
 
@@ -100,18 +102,22 @@
         <h2>42</h2>
         <p>Web design projects</p>
       </div>
+
       <div class="stat-info">
         <h2>123</h2>
         <p>Happy client</p>
       </div>
+
       <div class="stat-info">
         <h2>15</h2>
         <p>Award winner</p>
       </div>
+
       <div class="stat-info">
         <h2>99</h2>
         <p>Cup of coffee</p>
       </div>
+
       <div class="stat-info">
         <h2>24</h2>
         <p>Members</p>
@@ -142,6 +148,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
+
         <div class="service-item">
           <div class="service-icon">
             <img src="images/icons/LINE GRAPH.png" alt="graph">
@@ -151,6 +158,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum!</p>
           </div>
         </div>
+
         <div class="service-item">
           <div class="service-icon">
             <img src="images/icons/COMPUTER _ OK.png" alt="computer">
@@ -286,7 +294,7 @@
 
   </section>
 
-  <!-- reviews section 1 -->
+  <!-- reviews section one -->
 
   <div class="section reviews-section-one">
 
@@ -402,7 +410,7 @@
     </div>
   </section>
 
-  <!-- reviews section 2 -->
+  <!-- reviews section two -->
 
   <div class="section review-section-two">
 
@@ -515,17 +523,18 @@
         <div class="red-line"></div>
       </div>
 
-
       <div class="blog-row">
         <div class="article">
           <img src="images/15 Jan.png" alt="article1">
           <h6>Lorem ipsum dolor sit amet</h6>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
+
           <div class="views-comments">
             <div class="views">
               <img src="images/icons/VIEW.png" alt="view">
               <p>542</p>
             </div>
+
             <div class="comments">
               <img src="images/icons/SPEECH BUBBLE 2.png" alt="comments">
               <p>17</p>
@@ -538,6 +547,7 @@
           <img src="images/14 Jan.png" alt="article2">
           <h6>Lorem ipsum dolor sit amet</h6>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
+
           <div class="views-comments">
             <div class="views">
               <img src="images/icons/VIEW.png" alt="view">
@@ -555,6 +565,7 @@
           <img src="images/12 Jan.png" alt="article3">
           <h6>Lorem ipsum dolor sit amet</h6>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, in.</p>
+
           <div class="views-comments">
             <div class="views">
               <img src="images/icons/VIEW.png" alt="view">
@@ -599,7 +610,6 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab exercitationem cum repellendus accusantium saepe
           ratione obcaecati ea. Beatae eius earum ab ipsum quaerat est labore dolore pariatur aspernatur, ex non.</p>
 
-
         <div class="follow-part">
           <p><b>15k</b> followers</p>
 
@@ -622,7 +632,7 @@
 
         </div>
 
-        <!-- subscribe -->
+        <!-- subscribtion -->
 
         <div class="form">
           <input type="email" placeholder="Your Email...">
@@ -630,10 +640,11 @@
         </div>
       </div>
 
+      <!-- blogs -->
+
       <div class="blogs">
         <h6>BLOGS</h6>
 
-        <!-- CIA TURI BUTI NE H5, REIKIA PERZIURETI SRIFTUS IR DYDZIUS -->
         <div class="blog-post">
           <div class="blog-post-image">
             <img src="images/blog_photo.png" alt="blog1">
@@ -650,6 +661,7 @@
           <div class="blog-post-image">
             <img src="images/blog_photo1.png" alt="blog2">
           </div>
+
           <div class="blog-post-info">
             <h6>Lorem ipsum, dolor sit amet consectetur adipisicing.</h6>
             <p>Jan 9, 2016</p>
@@ -660,12 +672,15 @@
           <div class="blog-post-image">
             <img src="images/blog_photo_2.png" alt="blog3">
           </div>
+
           <div class="blog-post-info">
             <h6>Lorem ipsum, dolor sit amet consectetur adipisicing.</h6>
             <p>Jan 9, 2016</p>
           </div>
         </div>
       </div>
+
+      <!-- instagram -->
 
       <div class="instagram">
         <h6>INSTAGRAM</h6>
